--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ body{
     width: 100%;
 }
 .meal-item{
+    display: none;
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: 0 4px 21px -12px rgb(0, 0, 0, 0.79);
